--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,21 +1,22 @@
-<p>
-	<%= @user.id %>
-	<%= @user.name %>
-	<%= @user.prof %>
-</p>
-
-
-<% @user.tweets.each do |t| %>
-	<div class="list-group-item">
-	  <h4 class="user">
-		<span class="user-name">
-		  <%= link_to t.user.name, user_path(t.user) %>
-		</span>
-	  </h4>
-	  <p>
-	  	<%= t.content %>
-	  </p>
-	</div>
-<% end %>
-<p>
-</p>
+<div class='container'>
+  <div class="row">
+    <div class="col-xs-4 left-content">
+      <%= render "users/userinfo" %>
+    </div>
+    <div class="col-xs-8 right-content">
+      <%= render "tweets/header" %>
+		<% @user.tweets.each do |t| %>
+			<div class="list-group-item">
+			  <h4 class="user">
+				<span class="user-name">
+				  <%= link_to t.user.name, user_path(t.user) %>
+				</span>
+			  </h4>
+			  <p>
+			  	<%= t.content %>
+			  </p>
+			</div>
+		<% end %>
+    </div>
+  </div>
+</div>
