--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,11 +4,16 @@
       <h2>ユーザー一覧</h2>
     </div>
     <% @users.each do |u|%>
-      <h4 class="user">
-        <span class="user-name">
-          <%= link_to u.name, user_path(u)%>
-        </span>
-      </h4>
+      <div class="list-group-item">
+        <h4 class="user">
+          <span class="user-name">
+            <%= link_to u.name, user_path(u)%>
+          </span>
+          <span>
+            <%= "@"+u.name %>
+          </span>
+        </h4>
+      </div>
     <% end %>
   </div>
 </div>
